# ocaml-augeas

./: .depend  MANIFEST  META.in  Makefile.in  augeas-c.c  configure.ac
debian/: changelog  control  copyright  rules  watch
debian/patches/: 0001-Use-ocamlopt-g-option.patch  0002-caml_named_value-returns-const-value-pointer-in-OCam.patch  0005-Make-build-robust-against-make-shuffle.patch  series
